@@ -27,7 +27,7 @@ if [[ -z "${JARFILE}" ]]; then
   export CLASSPATH="${JAR_LIST_MAIN}:${JAR_LIST_LIB}"
 fi
 
-JALIEN_OPTS_DEFAULT="-server -Xms64m -Xmx512m -XX:+UseG1GC -XX:+DisableExplicitGC -XX:+UseCompressedOops -XX:+AggressiveOpts \
+JALIEN_OPTS_DEFAULT="-server -Xms64m -Xmx512m -XX:+UseG1GC -XX:+DisableExplicitGC -XX:+UseCompressedOops \
 -XX:+OptimizeStringConcat -XX:MaxTrivialSize=1K -XX:CompileThreshold=20000 -Duserid=$(id -u) -Dcom.sun.jndi.ldap.connect.pool=false"
 
 if [ ! -z "$TMPDIR" ]; then
